--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -2,10 +2,9 @@
   "build_entry_point": "docs",
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
-  "need_preview_pull_request": true,
   "docsets_to_publish": [
     {
-      "docset_name": "docset1",
+      "docset_name": "docset1-jsntcy",
       "build_source_folder": "docset1",
       "build_output_subfolder": "azure-test/docset1/base",
       "locale": "en-us",
@@ -23,6 +22,7 @@
   "notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
+  "need_preview_pull_request": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
@@ -30,5 +30,6 @@
       "branch": "master",
       "branch_mapping": {}
     }
-  ]
+  ],
+  "need_generate_pdf_url_template": false
 }
