--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -8,29 +8,29 @@
       "build_source_folder": "docset1",
       "build_output_subfolder": "azure-test/docset1/base",
       "locale": "en-us",
-      "version": 0,
+      "monikers": [],
       "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "docs",
-      "template_folder": "_themes"
+      "version": 0
     }
   ],
   "notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
+  "enable_push_aggregation": true,
+  "enable_pull_request_aggregation": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
-      "url": "https://github.com/jsntcy/templates.docs.msft",
-      "branch": "yu-test",
+      "url": "https://github.com/Microsoft/templates.docs.msft",
+      "branch": "master",
       "branch_mapping": {}
     }
   ],
-  "need_generate_pdf_url_template": false,
-  "package_version": "1.31.12"
+  "need_generate_pdf_url_template": false
 }
