--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -25,7 +25,7 @@
     "dependent_repositories": [{
         "path_to_root": "_themes",
         "url": "https://github.com/Microsoft/templates.docs.msft",
-        "branch": "master",
+        "branch": "master-prerelease",
         "branch_mapping": {}
     }],
     "need_generate_pdf_url_template": false
